Fixed stop command causing error.